recursion.logo.koch.Koch.scala.error
Erreur de compilation :
Koch:14: error: identifier expected but ')' found.
    snowSide(levels-1,length*1/3.)
                                 ^Koch:16: error: identifier expected but ')' found.
    snowSide(levels-1,length*1/3.)
                                 ^Koch:18: error: identifier expected but ')' found.
    snowSide(levels-1,length*1/3.)
                                 ^Koch:20: error: identifier expected but ')' found.
    snowSide(levels-1,length*1/3.)
                                 ^